test/error/20.c
int main(void){
    printf("%d", sizeof(static int[5]));
}